[ADD] submodule prodigia_xml_to_invoice

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = kardex
 	url = git@github.com:mailynC/kardex.git
 	branch = 12.0
+
+[submodule "prodigia_xml_to_invoice"]
+	path = prodigia_xml_to_invoice
+	url = git@github.com:mailynC/prodigia_xml_to_invoice.git
+	branch = 12.0
